...
    <string name="unknown">"Not set"</string>
    <string name="email">"email"</string>
    <string name="brushing_streak_accept_challenge">"Accept Challenge"</string>
    <string name="brushing_quiz_your_program">"your brushing program is"</string>
    <string name="brushing_quiz_reset">"Reset to default"</string>
...

    <!-- Should contains brushing_streak_discover_guided_brushing_subtitle_highlight -->
    <string name="brushing_streak_discover_guided_brushing_subtitle">"Discover our Guided brushing! The best way to get results"</string>

    <!-- should be contains in brushing_streak_discover_guided_brushing_subtitle -->
...

    <!-- Should contains brushing_streak_five_consecutive_days_subtitle_highlight -->
    <string name="brushing_streak_five_consecutive_days_subtitle">"Stay connected! Brush for 5 consecutive days"</string>

    <!-- Should be contains in brushing_streak_five_consecutive_days_subtitle -->
...
    <!-- Should be included in brushing_streak_five_consecutive_days_twice_a_day_eighty_percent_coverage_subtitle -->
    <string name="brushing_streak_five_consecutive_days_twice_a_day_eighty_percent_coverage_subtitle_highlight">"Improve your coverage!"</string>
    <string name="brushing_streak_discover_guided_brushing_title_description_not_accepted">"Welcome to Colgate Connect app!"</string>

    <!-- Fuzzy -->
    <string name="brushing_streak_title_description_completed">"Congratulations!"</string>
    <string name="brushing_streak_discover_offline_brushing_title_description_not_accepted">"Welcome to Colgate Connect app!"</string>

    <!-- Fuzzy -->
    <string name="brushing_streak_title_description_ongoing">"Challenge accepted"</string>

    <!-- Fuzzy -->
...

    <!-- should contain brushing_streak_discover_guided_brushing_description_ongoing_highlight -->
    <string name="brushing_streak_discover_guided_brushing_description_ongoing">"Do your first guided brushing today ; the best way to get results !"</string>

    <!-- should be included in brushing_streak_discover_guided_brushing_description_ongoing -->
...

    <!-- Should contain brushing_streak_discover_guided_brushing_description_complete_highlight -->
    <string name="brushing_streak_discover_guided_brushing_description_complete">"You have successfully completed the challenge. We’ve added 1 point to your balance."</string>

    <!-- Should be included in brushing_streak_discover_guided_brushing_description_complete -->
    <string name="brushing_streak_discover_guided_brushing_description_complete_highlight">"1 point"</string>
    <string name="brushing_streak_discover_guided_brushing_accept_challenge">"Go to guided brushing"</string>
    <string name="brushing_streak_discover_complete_challenge">"Complete challenge"</string>

    <!-- Should contain brushing_streak_discover_offline_brushing_description_ongoing_highlight -->
...

    <!-- Should contain brushing_streak_five_consecutive_days_description_ongoing_highlight -->
    <string name="brushing_streak_five_consecutive_days_description_ongoing">"Brush for 5 consecutive days with your smart toothbrush and earn some points"</string>

    <!-- Should be included in brushing_streak_five_consecutive_days_description_ongoing -->
...
    <string name="cart_taxes_estimation">"Est. Tax
Est. Shipping"</string>
    <string name="brushing_streak_title_for_5_days_challenge">"Brushing streak"</string>
    <string name="brushing_streak_title_for_1_day_challenge">"Discover activity"</string>
    <string name="ota_failure_title">"update failed"</string>
    <string name="ota_failure_content">"The toothbrush cannot be updated at the moment."</string>
...
    <string name="form_shipping_last_name_error">"Last name is missing"</string>
    <string name="points_increase">"+%1$d points"</string>
    <string name="challenge_completed_dialog_title">"Congratulations!"</string>
    <string name="challenge_completed_dialog_body">"You have successfully completed the challenge, and we’ve added %s to your balance."</string>
    <string name="challenge_completed_dialog_body_highlight">"%s points"</string>
    <string name="challenge_completed_dialog_button">"complete challenge"</string>
    <string name="last_brushing_card_test_brushing">"Test brushing"</string>
    <string name="cart_proceed_checkout">"Proceed to checkout"</string>
...
